# PyOghma

./: .gitignore  LICENSE  README.md  Test.py  ml_config_test.py  ml_sim_test.py  pyproject.toml  setup.py
PyOghma.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Calculate.html  Epitaxy.html  Fitting.html  ML.html  OghmaNano.html  OghmaResults.html  Server.html  Sims.html  index.html
docs/PyOghma/: Calculate.html  Epitaxy.html  Fitting.html  ML.html  OghmaNano.html  OghmaResults.html  Optical.html  Server.html  Sims.html  Thermal.html  index.html
docs/PyOghma/Sim_Defaults/: index.html
docs/src/PyOghma/: ML.html  Optical.html  (+1 more)
ml_example/: sim.json
ml_example2/: sim.json
ml_example2/faster/: errors.txt  input_vec.txt  stats.json  targets.txt  vectors.csv  vectors.json
pyOghma/: Fitting.py  ML.py  OghmaML.py  OghmaNano.py  OghmaResults.py  Optical.py  Sims.py  Thermal.py
src/PyOghma/: Calculate.py  Epitaxy.py  Fitting.py  ML.py  OghmaNano.py  OghmaResults.py  Optical.py  Server.py  Sims.py  Thermal.py  __init__.py
standard_device/: aabb.csv  charge.csv  charge_tot.csv  charge_with_surface.csv  device.csv  iv.csv  iv_contact0.csv  iv_contact0.plot  iv_contact1.csv  iv_contact1.plot  jv.csv  jv_contact0.csv  jv_contact1.csv  k.csv  sim.json
standard_device/cache/: data.json  dos_2180775685f023d1.chk  dos_96b0d04631847114.chk
standard_device/optical_output/: G_y.csv  G_zxy.csv  Htot_zxy.csv  data.json  light_src_idfd67e6c12ee7cc30.csv  photons_yl_norm.csv  photons_zxy.csv  reflect.csv  transmit.csv
standard_device/optical_snapshots/: data.json
(+144 files in other folders)
